reporter-cleanup-phase-1 - Fixed URL problem
Former-commit-id: ad452cbbd5144e9095b0b01bdb1d4b7705cfc8b8
Former-commit-id: e42c0fb4a70884ed224802adbd41887133993a3d